// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching a regular search 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "SHOW_LOGS_TAB",
  "SEARCH_HISTORY_PUSH",
  "VIEWER_CLEAR",
  "SEARCH_REGISTER",
  "SEARCH_REGISTER",
]
`;

exports[`fetching an analytic search 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "SHOW_ANALYTICS_TAB",
  "SEARCH_HISTORY_PUSH",
  "VIEWER_CLEAR",
  "SEARCH_REGISTER",
]
`;

exports[`fetching an analytic search without history 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "SHOW_ANALYTICS_TAB",
  "VIEWER_CLEAR",
  "SEARCH_REGISTER",
]
`;

exports[`fetching an zoom search 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "SHOW_ANALYTICS_TAB",
  "SEARCH_HISTORY_PUSH",
  "VIEWER_CLEAR",
  "SEARCH_REGISTER",
]
`;

exports[`fetching an zoom search without history 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "SHOW_ANALYTICS_TAB",
  "VIEWER_CLEAR",
  "SEARCH_RESULTS_CLEAR",
  "SEARCH_REGISTER",
]
`;

exports[`not saving a search to history 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "SHOW_LOGS_TAB",
  "VIEWER_CLEAR",
  "SEARCH_REGISTER",
  "SEARCH_REGISTER",
]
`;
